# saturno

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  run_server.sh  rustfmt.toml
.github/workflows/: rust.yml
apps/: rustfmt.toml
apps/mandelbrot_gen/: Cargo.toml
apps/mandelbrot_gen/src/: main.rs
backend/: .env  build.sh  main.go  test.sh
backend/server/: server.go  server_test.go
frontend/: .gitignore  SETUP.md  build.sh  index.html  package-lock.json  package.json  tsconfig.json  webpack.dev.js  webpack.prod.js
frontend/_src_ts/: Viewport.css
frontend/src/: Viewport.jsx  Viewport.tsx  helloWorld.css  helloWorld.js  index.js  index.jsx  index.tsx
rendering/: .gitignore  Cargo.toml
rendering/src/: lib.rs
rendering/src/mandelbrot/: lut.rs  mod.rs
rendering/src/raytracer/: actor.rs  camera.rs  common.rs  common_testing.rs  external.rs  image.rs  material.rs  mod.rs  scenes.rs
rendering_wasm/: Cargo.toml
rendering_wasm/src/: lib.rs  utils.rs
server/: Cargo.toml
server/src/: main.rs
server/src/renderer/: mod.rs
