# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rendering"
version = "0.1.0"
authors = ["Alvaro Sanchez <a.sanchez@smartreporting.de>"]
edition = "2018"

[lib]
name = "rendering_c_abi"
crate-type = ["dylib"]
edition = "2018"

[dependencies]
num = "0.2.0"
ndarray = "0.12.0"
rand = "0.7.2"

[dev-dependencies]
image = "0.22.3"
