# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rendering"
version = "0.1.0"
authors = ["Alvaro Sanchez <a.sanchez@smartreporting.de>"]
edition = "2018"

[lib]
name = "rendering"
crate-type = ["cdylib", "rlib"]
edition = "2018"

[dependencies]
num = "0.2.0"
ndarray = "0.12.0"
rayon = "1.3.1"
#rand = "0.7.2"
#web-sys = "*"

[dependencies.rand]                                   
version = "0.7.2"
features = ["wasm-bindgen"]       
                            
#[dependencies.web-sys]
#version = "*"
#features = [ "console" ]

[dev-dependencies]
image = "0.22.3"
