# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rendering"
version = "0.2.0"
authors = ["Alvaro Sanchez <asmoscosa@gmail.com>"]
edition = "2018"

[lib]
name = "rendering"
crate-type = ["cdylib", "rlib"]
edition = "2018"

[dependencies]
num = "0.2.0"
ndarray = "0.12.0"
rayon = "1.3.1"
rand_pcg = "0.2.0"
image = "0.22.3"

[dependencies.rand]                                   
version = "0.7.3"
features = ["wasm-bindgen"]       
                            
#[dependencies.web-sys]
#version = "*"
#features = [ "console" ]

[dev-dependencies]
image = "0.22.3"
