[package]
name = "rendering_wasm"
version = "0.1.0"
authors = ["Alvaro Sanchez <a.sanchez@smartreporting.de>"]
edition = "2018"

[lib]
name = "rendering_wasm"
crate-type = ["cdylib", "rlib"]
edition = "2018"

[features]
default = ["console_error_panic_hook"]

[dependencies]
#rendering = { path = "../rendering" }
wasm-bindgen = "0.2"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

#[profile.release]
## Tell `rustc` to optimize for small code size.
#opt-level = "s"
