[package]
name = "server"
version = "0.2.0"
authors = ["Alvaro Sanchez <asmoscosa@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rendering = { path = "../rendering" }
image = "0.22.3"
actix-web = "4"
actix-cors = "0.6.1"
log = "0.4.17"
env_logger = "0.9.0"
